# talk-with-Lain-Iwakura-chat-deepseek

./: README.md  package-lock.json  package.json  vite.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: Sidebar.svelte  store.ts
src/routes/: +layout.svelte  +page.svelte
